--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
-Pineapple Tracker
-
+<!doctype html>
+<html>
+  <head>
+    <title>Pineapple Tracker</title>
+    <style>
+      * {
+        -ms-transform: rotate(2deg);
+        -webkit-transform: rotate(2deg);
+        transform: rotate(2deg);
+      }
+      h1:hover {
+        background-color: f030f0;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Pineapple Tracker</h1>
+<pre>
 \\\\\\\\
 |\\\///\//
   /////// 
@@ -11,3 +27,6 @@ Pineapple Tracker
     \  \  \
     l
     \
+</pre>
+</body>
+</html>
