--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Pineapple Tracker</title>
     <style>
+    /* the worst css in the world//*/
+    body{margin-top: 20px; margin-left: 20px; }
       * {
         -ms-transform: rotate(2deg);
         -webkit-transform: rotate(2deg);
