--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Pineapple Tracker</title>
     <style>
     /* the worst css in the world//*/
-    body{margin-top: 20px; margin-left: 20px; }
+    body{margin-top: 20px; margin-left: 20px;
+      background-color: #b0a0d0; /* fred style ?*/
+    }
       * {
         -ms-transform: rotate(2deg);
         -webkit-transform: rotate(2deg);
