--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Pineapple Tracker</title>
     <style>
     /* the worst css in the world//*/
-    body{margin-top: 20px; margin-left: 20px;
+    body{
       background-color: #b0a0d0; /* fred style ?*/
     }
       * {
@@ -15,9 +15,14 @@
       h1:hover {
         background-color: f030f0;
       }
+      .pineapple-container {
+        margin-top: 100px;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
+    <div class="pineapple-container">
     <h1>Pineapple Tracker</h1>
 <pre>
 \\\\\\\\
@@ -32,5 +37,6 @@
     l
     \
 </pre>
+</div>
 </body>
 </html>
