--- a/index.html
+++ b/index.html
@@ -37,6 +37,36 @@
     l
     \
 </pre>
-</div>
+<pre>
+PINEAPPLEtRACKER °93()  π4<>   ┌01{}               ┌01[]    step -= 1
+┌ 0002:00 00:00 00:00 00:00  00└ E-4 01 v05 ...  00└ w 02
+│ 0101:00 00:00 00:00 00:00  01┌ --- 00 ... ...  01┌ + C-4  comment:
+│ 0202:00 10:00 30:00 30:f4  02│ H-3 00 v10 ...
+│ 0301:00 10:00 30:00 30:f4  03│ --- 00 ... ...
+├ 0402:00 10:00 30:f0 30:e8  04├ A-3 00 v15 ...
+│ 0501:00 10:00 30:ef 30:e7  05│ --- 00 ... ...
+│ 0604:00 10:0e 30:f0 30:e9  06│ G-3 00 v20 ...
+│ 0703:00 10:0f 30:f0 30:e9  07│ --- 00 ... ...
+├ 0802:00 10:00 30:f4 30:e8  08├ E-4 01 v25 ...
+└ 0901:00 10:00 30:f4 30:e8  09│ --- 00 ... ...
+                             0a│ H-3 00 v30 ...
+                             0b│ --- 00 ... ...
+                             0c├ A-3 00 v35 ...
+                             0d│ --- 00 ... ...
+                             0e│ G-3 00 v40 ...
+                             0f│ --- 00 ... ...
+                             10├ E-4 01 v45 ...
+                             11│ --- 00 ... ...
+                             12│ H-3 00 v50 ...
+                             13│ --- 00 ... ...
+                             14├ A-3 00 v55 ...
+                             15│ --- 00 ... ...
+                             16│ G-3 00 v60 ...
+                             17│ --- 00 ... ...
+                             18├ E-4 01 v65 ...
+                             19│ --- 00 ... ...
+songs/josh.song
+</pre>
+</div><!-- end .pineapple-container -->
 </body>
 </html>
