--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta http-equiv="Content-Language" content="en">
         <title>Pineapple Tracker</title>
         <style>
          /* the worst css in the world//*/
