Update background color bc @mcfiredrill had it memorized
https://github.com/pineapple-tracker/pineapple-tracker.github.io/issues/1#issuecomment-147929173

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <style>
          /* the worst css in the world//*/
          body{
-             background-color: #b0a0d0; /* fred style ?*/
+             background-color: #660066; /* fred style ?*/
          }
          * {
              -ms-transform: rotate(2deg);
