change text color to white

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
          /* the worst css in the world//*/
          body{
              background-color: #660066; /* fred style ?*/
+             color: #ffffff;
          }
          * {
              -ms-transform: rotate(2deg);
