--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <style>
          /* the worst css in the world//*/
          body{
-             background-color: #660066; /* fred style ?*/
+             background-color: #660066;
              color: #ffffff;
          }
          * {
